c3prj1_deck/grade.txt
Grading at Sat Nov  9 07:16:23 UTC 2019
Compiling deck.c
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:84:10: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   return x ;
          ^
cards.c: In function ‘print_card’:
cards.c:66:8: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   char x;
        ^
cc1: all warnings being treated as errors
Could not compile your cards.c!

Overall Grade: FAILED
